--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,9 @@
+% Copyright (c) 2023 Boshi Yuan
+% Copyright (c) 2024 yueneiqi
+% 
+% This software is released under the MIT License.
+% https://opensource.org/licenses/MIT
+
 \documentclass[a4paper,zihao=-4,AutoFakeBold]{ctexart}
 
 \usepackage{geometry}
