--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,9 @@
+// Copyright (c) 2023 Boshi Yuan
+// Copyright (c) 2024 yueneiqi
+// 
+// This software is released under the MIT License.
+// https://opensource.org/licenses/MIT
+
 @InProceedings{SPDZ,
 author="Damg{\aa}rd, Ivan
 and Pastro, Valerio
